--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build Angular app
         run: |
           cd frontend
-          ng build --configuration=production
+          ng build-prod
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
